# Sauron

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  requirements.txt  start_sauron.sh
docs/design/: post_extraction_enrichment.md
docs/integration/: D1-lane-inventory.md  D2-dedup-matrix.md  D2-dedup-patch-summary.md  D3-endpoint-contract-table.md  D4-0A-sanity-report.md  D5-phase0-contract-report.md  D6-0C-completion-report.md  networking-app.md
docs/specs/: Frontend_Design_Spec.md  Integration_Spec_v2.md  Integration_Spec_v2_progress.md  Iterative_Improvement_Spec.md  Pipeline_Redesign_Spec.md  (+2 more)
frontend/: .gitignore  chromatic.config.json  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src/: App.jsx  (+4 more)
sauron/: __init__.py  config.py  executor.py  main.py  security.py
tests/: conftest.py  helpers.py  test_api_conversations.py  test_api_review.py  test_audit_fixes.py  test_beliefs.py  test_cascade_filter.py  test_contact_bridge.py  test_db_connection.py  test_embedder_connections.py  test_entity_resolver.py  test_extraction_schemas.py  test_frontend_smoke.py  test_learning_amendments.py  test_link_remaining.py  test_morning_email_connections.py  test_people_consolidation.py  test_people_graph_degraded.py  test_phase0_remediation.py  test_phase1_config.py  test_phase2_concurrency.py  test_phase3_4.py  test_phase4_fixes.py  test_phase5_coverage.py  test_review_actions_routing.py  test_routing_log.py  test_routing_networking.py  test_routing_retry.py  test_schema_tables.py  test_security.py  test_speakers_profiles.py
(+250 files in other folders)
